--- a/mockups/html/v2/css/content.css
+++ b/mockups/html/v2/css/content.css
@@ -10,3 +10,9 @@
     bottom:     0;
     width:      79%;
 }
+
+.content-wrapper .content {
+    clear: both;
+    padding: 25px 20px 20px 20px;
+    height: 1000px;
+}
